# PlexPreferCHTSubs

./: .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.zh-TW.md  config.example.yaml  diagnose.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
src/plexchtsubs/: __init__.py  __main__.py  cli.py  config.py  detector.py  display.py  history.py  scanner.py  scheduler.py  watcher.py  web.py
src/plexchtsubs/static/: index.html
tests/: test_detector.py  test_history.py  test_integration.py  test_watcher.py  test_web.py
