[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PlexPreferCHTSubs"
version = "1.0.0"
description = "Automatically set Traditional Chinese (繁體中文) as the preferred subtitle in Plex."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "TubeBoy" },
]
keywords = ["plex", "subtitle", "traditional-chinese", "繁體中文"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "plexapi>=4.15.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/TubeBoyJimmy/PlexPreferCHTSubs"
Issues = "https://github.com/TubeBoyJimmy/PlexPreferCHTSubs/issues"

[project.scripts]
plexchtsubs = "plexchtsubs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
